feat(visits): update logic and add more colom to table visits
